# 2fast2lamaa

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: rviz_config.rviz
external_lib/: CMakeLists.txt  KDTree.h
external_lib/PoissonRecon/: CMakeLists.txt  README.md
external_lib/PoissonRecon/Src/: BSplineData.h  DataStream.imp.inl  FEMTree.h  FEMTree.inl  Image.h  MarchingCubes.h  MyMiscellany.h  PNG.h  PPolynomial.inl  Ply.inl  PlyFile.h  PlyFile.inl  PoissonReconWrapped.cpp  PoissonReconWrapped.h  Polynomial.inl  RegularGrid.h  RegularGrid.inl  VertexFactory.h  VertexFactory.inl
external_lib/happly/: happly.h
external_lib/phtree-cpp/: .bazelrc  .clang-format  .gitignore  BUILD  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  WORKSPACE
external_lib/phtree-cpp/.github/workflows/: bazel.yml  cmake-codecov.yml  cmake-macos.yml_fails  cmake-windows.yml  cmake.yml  codcecov.yml_old
external_lib/phtree-cpp/benchmark/: BUILD  CMakeLists.txt  benchmark_util.h  bit_ops_benchmark.cc  bpt_erase_benchmark.cc  bpt_erase_it_benchmark.cc  bpt_insert_benchmark.cc  bpt_iter_benchmark.cc  bpt_lower_bound_benchmark.cc  bpt_results-2022-12-05.txt  bpt_results-2023-02.txt  count_mm_d_benchmark.cc  erase_benchmark.cc  erase_d_benchmark.cc  extent_benchmark.cc  extent_benchmark_weird.cc  find_benchmark.cc  hd_erase_d_benchmark.cc  hd_insert_d_benchmark.cc  hd_knn_d_benchmark.cc  hd_query_d_benchmark.cc  insert_benchmark.cc  insert_box_d_benchmark.cc  insert_d_benchmark.cc  knn_d_benchmark.cc  knn_mm_d_benchmark.cc  logging.h  query_benchmark.cc  query_box_d_benchmark.cc  query_d_benchmark.cc  query_mm_box_d_benchmark.cc  query_mm_d_benchmark.cc  query_mm_d_filter_benchmark.cc  update_box_d_benchmark.cc  update_d_benchmark.cc  update_mm_box_d_benchmark.cc  update_mm_d_benchmark.cc
external_lib/phtree-cpp/ci/includes/: os.sh
external_lib/phtree-cpp/ci/linting/: buildifier.sh  clang-format.sh
external_lib/phtree-cpp/examples/: BUILD  CMakeLists.txt  example.cc
external_lib/phtree-cpp/fuzzer/: BUILD  README.md  b_plus_hash_map_fuzzer.cc  b_plus_map_fuzzer.cc  b_plus_multimap_fuzzer.cc  phtree_mm_relocate_fuzzer.cc
external_lib/phtree-cpp/include/phtree/: converter.h  distance.h  filter.h  phtree.h  phtree_multimap.h
external_lib/phtree-cpp/include/phtree/common/: BUILD  README.md  b_plus_tree_base.h  b_plus_tree_hash_map.h  b_plus_tree_map.h  b_plus_tree_multimap.h  base_types.h  bits.h  bpt_fixed_vector.h  bpt_priority_queue.h  common.h  debug_helper.h  flat_array_map.h  flat_sparse_map.h  tree_stats.h
external_lib/phtree-cpp/include/phtree/v16/: BUILD  debug_helper_v16.h  entry.h  for_each.h  for_each_hc.h  iterator_base.h  iterator_full.h  iterator_hc.h  iterator_knn_hs.h  iterator_lower_bound.h  iterator_with_parent.h  node.h  phtree_v16.h
external_lib/phtree-cpp/test/: BUILD  CMakeLists.txt  all_tests.cc  converter_test.cc  distance_test.cc  filter_test.cc  phtree_box_d_test.cc  phtree_box_d_test_filter.cc  phtree_box_d_test_query_types.cc  phtree_box_f_test.cc  phtree_d_test.cc  phtree_d_test_copy_move.cc  phtree_d_test_custom_key.cc  phtree_d_test_filter.cc  phtree_d_test_preprocessor.cc  phtree_f_test.cc  phtree_multimap_box_d_test.cc  phtree_multimap_d_test.cc  phtree_multimap_d_test_copy_move.cc  phtree_multimap_d_test_filter.cc  phtree_multimap_d_test_unique_ptr_values.cc  phtree_test.cc  phtree_test_const_values.cc  phtree_test_issue_142.cc  phtree_test_issues.cc  phtree_test_ptr_values.cc  phtree_test_unique_ptr_values.cc
external_lib/phtree-cpp/test/common/: BUILD  CMakeLists.txt  b_plus_tree_hash_map_test.cc  b_plus_tree_map_test.cc  b_plus_tree_multimap_test.cc  b_priority_queue_test.cc  b_vector_test.cc  base_types_test.cc  bits_test.cc  common_test.cc  flat_array_map_test.cc  flat_sparse_map_test.cc  scripts.cmake
external_lib/phtree-cpp/tools/runners/sanitizers/asan/: BUILD  asan.sh  lsan-suppressions.txt
external_lib/phtree-cpp/tools/runners/sanitizers/msan/: BUILD  msan.sh
external_lib/phtree-cpp/tools/runners/sanitizers/tsan/: BUILD  tsan.sh
external_lib/phtree-cpp/tools/runners/sanitizers/ubsan/: BUILD  ubsan.sh
external_lib/phtree-cpp/tools/runners/sanitizers/valgrind-memcheck/: BUILD  valgrind-memcheck.sh  valgrind-suppressions.txt
include/lice/: cost_functions.h  dynamic_score.h  lidar_front_end.h  lidar_odometry.h  lidar_odometry_node.h  map_distance_field.h  math_utils.h  ros_utils.h  state.h  types.h  utils.h
include/preint/: math_utils.h  preint.h  types.h
launch/: os0_lidar_odometry.launch  os0_lidar_odometry.launch.py  os0_lidar_undistortion.launch  os0_lidar_undistortion.launch.py  rgbd.launch  rgbd.launch.py
src/: field_visualiser_node.cpp  gp_map_node.cpp  lidar_feature_detection_node.cpp  lidar_odometry_node.cpp  scan_maker_node.cpp
src/lib/: lidar_odometry.cpp  map_distance_field.cpp  state.cpp
srv/: QueryDistField.srv
